--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,7 @@
   <nav class="nav" id="main-nav">
     <a href="admin.html" class="active">Dashboard</a>
     <a href="admin-users.html">Users</a>
+    <a href="admin-payment-settings.html">Payment Settings</a>
     <a href="admin-payments.html">Payments</a>
     <a href="admin-subscription-settings.html">Subscription Settings</a>
     <a href="admin-chat.html">Chat Inbox</a>
