--- a/forgot-password.html
+++ b/forgot-password.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Forgot Password — BiTForeX</title>
+  <title>Forgot Password — BiTForeX Academy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -27,10 +27,10 @@
 
   <form id="forgotForm">
     <input type="email" id="forgotEmail" placeholder="Enter your registered email" required />
-    <button class="btn primary" style="width:100%;margin-top:12px">Lookup</button>
+    <button class="btn primary" style="width:100%;margin-top:12px">Lookup Account</button>
   </form>
 
-  <p style="margin-top:12px;text-align:center" id="forgotResult"></p>
+  <p style="margin-top:15px;text-align:center" id="forgotResult"></p>
 </main>
 
 <script src="script.js"></script>
@@ -41,31 +41,48 @@ document.addEventListener('DOMContentLoaded', () => {
 
   form.addEventListener('submit', (e) => {
     e.preventDefault();
+
     const email = document.getElementById('forgotEmail').value.trim().toLowerCase();
     const admin = JSON.parse(localStorage.getItem('adminAccount') || '{}');
+    const users = JSON.parse(localStorage.getItem('users') || '[]');
 
-    // check admin account
-    if (admin && admin.email && admin.email.toLowerCase() === email) {
-      out.innerHTML = '<span class="muted">Admin account detected. Use your admin credentials.</span>';
+    // ADMIN CHECK
+    if (admin.email && admin.email.toLowerCase() === email) {
+      out.innerHTML = `
+        <div class="muted">Admin Account Found:</div>
+        <strong>${admin.name}</strong><br>
+        <span class="muted">${admin.email}</span>
+        <div style="margin-top:10px">
+          <button id="revealBtn" class="btn small">Reveal Password</button>
+        </div>
+      `;
+
+      document.getElementById('revealBtn').addEventListener('click', () => {
+        alert("Admin Password: " + admin.password);
+      });
+
       return;
     }
 
-    const users = JSON.parse(localStorage.getItem('users') || '[]');
+    // NORMAL USER CHECK
     const user = users.find(u => u.email.toLowerCase() === email);
 
     if (!user) {
-      out.innerHTML = '<span class="muted">No account found for that email.</span>';
+      out.innerHTML = `<span class="muted">No account found for that email.</span>`;
       return;
     }
 
-    // DEMO: show a non-sensitive hint and allow temporary "reveal" of password
-    out.innerHTML = `<div class="muted">Account found for <strong>${user.name || user.email}</strong>.</div>
+    out.innerHTML = `
+      <div class="muted">Account Found:</div>
+      <strong>${user.name}</strong><br>
+      <span class="muted">${user.email}</span>
       <div style="margin-top:10px">
-        <button id="revealBtn" class="btn small">Show password (demo)</button>
-      </div>`;
+        <button id="revealBtn" class="btn small">Reveal Password</button>
+      </div>
+    `;
 
     document.getElementById('revealBtn').addEventListener('click', () => {
-      alert('Demo: password for ' + user.email + ' is: ' + user.password);
+      alert("Password for " + user.email + " is: " + user.password);
     });
   });
 });
