--- a/login.html
+++ b/login.html
@@ -31,7 +31,12 @@
     <button class="btn primary" style="width:100%;margin-top:18px">Sign In</button>
   </form>
 
+  <!-- ✅ FORGOT PASSWORD ADDED -->
   <p style="margin-top:12px;text-align:center">
+    <a href="forgot-password.html" class="muted">Forgot Password?</a>
+  </p>
+
+  <p style="margin-top:8px;text-align:center">
     <a href="register.html" class="muted">Create Account</a>
   </p>
 </main>
