--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,7 @@
     <a href="admin-users.html">Users</a>
     <a href="admin-payment-settings.html">Payment Settings</a>
     <a href="admin-payments.html">Payments</a>
+    <a href="admin-courses.html">Courses</a>
     <a href="admin-subscription-settings.html">Subscription Settings</a>
     <a href="admin-chat.html">Chat Inbox</a>
     <a href="admin-profile.html">Profile</a>
