--- a/courses.html
+++ b/courses.html
@@ -53,6 +53,22 @@
   data-title="Smart Money Concepts (SMC)"
   data-desc="Market structure, liquidity zones, entry/exit workflows.">
   View
+</button></article>
+<article class="panel" style="padding:22px;">
+      <h3>Candle Range Theory (CRT)</h3>
+      <p class="muted">Market structure, Highs and Lows liquidity, Breakout of Candle Range and Closing workflows, Entry/Exit Point</p>
+<button class="btn primary view-course-btn"
+  data-title="Candle Range Theory (CRT)"
+  data-desc="Market structure, Highs and Lows liquidity, Breakout of Candle Range and Closing.">
+  View
+</button></article>
+<article class="panel" style="padding:22px;">
+      <h3>Opening Range Breakout (ORB)</h3>
+      <p class="muted">Market structure, Opening and closing Range Candle, entry/exit workflows.</p>
+<button class="btn primary view-course-btn"
+  data-title="Opening Range Breakout (ORB)"
+  data-desc="Market structure, Opening and closing Range Candle, entry/exit workflows">
+  View
 </button>
     </article>
 
