--- a/register.html
+++ b/register.html
@@ -1,34 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Create Account — BiTForeX Academy</title>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Register — BiTForeX Academy</title>
 <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
 <header class="navbar">
   <div class="brand">
-    <div class="logo-circle"><img src="logo.jpg" /></div>
+    <div class="logo-circle"><img src="logo.jpg"></div>
     <a class="logo-text" href="index.html">BiTForeX Academy</a>
   </div>
+
   <nav class="nav" id="main-nav">
     <a href="index.html">Home</a>
     <a href="login.html">Login</a>
   </nav>
+
   <div class="menu-toggle" id="menu-toggle">☰</div>
 </header>
 
-
 <main class="auth-container">
-  <h2 style="margin-bottom:12px">Create Account</h2>
+  <h2>Create Account</h2>
 
-  <form id="register-form">
+  <form id="registerForm">
     <input type="text" id="r-name" placeholder="Full Name" required />
     <input type="email" id="r-email" placeholder="Email" required />
     <input type="password" id="r-password" placeholder="Password" required />
-
     <button class="btn primary" style="width:100%;margin-top:18px">Register</button>
   </form>
 
@@ -36,6 +37,9 @@
     <a href="login.html" class="muted">Already have an account?</a>
   </p>
 </main>
+
+<!-- Firebase -->
+<script src="firebase.js"></script>
 
 <script src="script.js"></script>
 </body>
