--- a/register.html
+++ b/register.html
@@ -1,26 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Register — BiTForeX Academy</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Reset Password — BiTForeX</title>
 <link rel="stylesheet" href="style.css">
 <style>
-.auth-box {
-  max-width: 380px; margin: 120px auto; padding:30px;
-  background:#111; border-radius:12px;
-  box-shadow:0 0 0 1px rgba(255,255,255,0.08);
-}
-.input-wrap { position:relative; }
-.reveal-btn { position:absolute; right:10px; top:11px; color:#0f0; cursor:pointer; }
+.auth-box { max-width:380px;margin:120px auto;padding:30px;background:#111;border-radius:12px;box-shadow:0 0 0 1px rgba(255,255,255,0.08); }
 </style>
 </head>
 
 <body>
+
 <header class="navbar">
   <div class="brand">
     <div class="logo-circle"><img src="logo.jpg"></div>
-    <span class="logo-text">BiTForeX Academy</span>
+    <span class="logo-text">BiTForeX</span>
   </div>
   <nav class="nav" id="main-nav">
     <a href="login.html">Login</a>
@@ -29,12 +24,18 @@
 </header>
 
 <div class="auth-box fade-in-up">
-  <h2>Create Account</h2>
+  <h2>Reset Password</h2>
 
-  <form id="registerForm">
-    <input id="r-name" type="text" placeholder="Full Name" required>
-    <input id="r-email" type="email" placeholder="Email" required>
+  <form id="forgotForm">
+    <input id="forgotEmail" type="email" placeholder="Enter your email" required>
+    <button class="btn primary" style="width:100%;margin-top:18px">Send Reset Link</button>
+  </form>
+</div>
 
+<script src="firebase.js"></script>
+<script src="script.js"></script>
+</body>
+</html>
     <div class="input-wrap">
       <input id="r-password" type="password" placeholder="Password" required>
       <span class="reveal-btn" onclick="togglePass('r-password', this)">Show</span>
