--- a/courses.html
+++ b/courses.html
@@ -90,7 +90,7 @@
 <footer class="site-footer" style="margin-top:40px;">
   <p>© <span id="yr"></span> BiTForeX Academy</p>
 </footer>
-
+<script src="firebase.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
