--- a/forgot-password.html
+++ b/forgot-password.html
@@ -1,91 +1,28 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Forgot Password — BiTForeX Academy</title>
+  <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Forgot Password — BiTForeX</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
 <header class="navbar">
-  <div class="brand">
-    <div class="logo-circle"><img src="logo.jpg" alt="logo"></div>
-    <a class="logo-text" href="index.html">BiTForeX Academy</a>
-  </div>
-
-  <nav class="nav" id="main-nav">
-    <a href="index.html">Home</a>
-    <a href="login.html">Login</a>
-  </nav>
-
+  <div class="brand"><div class="logo-circle"><img src="logo.jpg" alt="logo"></div><a class="logo-text" href="index.html">BiTForeX Academy</a></div>
+  <nav class="nav" id="main-nav"><a href="index.html">Home</a><a href="login.html">Login</a></nav>
   <div class="menu-toggle" id="menu-toggle">☰</div>
 </header>
 
 <main class="auth-container">
-  <h2 style="margin-bottom:12px">Forgot Password</h2>
-
+  <h2>Forgot Password</h2>
   <form id="forgotForm">
     <input type="email" id="forgotEmail" placeholder="Enter your registered email" required />
-    <button class="btn primary" style="width:100%;margin-top:12px">Lookup Account</button>
+    <button class="btn primary" style="width:100%;margin-top:12px">Lookup / Reset</button>
   </form>
-
-  <p style="margin-top:15px;text-align:center" id="forgotResult"></p>
+  <p id="forgotResult" style="margin-top:12px;"></p>
+  <p class="muted" style="margin-top:12px">If you registered before we used Firebase (legacy/local accounts), a demo reveal option will appear.</p>
 </main>
 
+<script src="firebase.js"></script>
 <script src="script.js"></script>
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-  const form = document.getElementById('forgotForm');
-  const out = document.getElementById('forgotResult');
-
-  form.addEventListener('submit', (e) => {
-    e.preventDefault();
-
-    const email = document.getElementById('forgotEmail').value.trim().toLowerCase();
-    const admin = JSON.parse(localStorage.getItem('adminAccount') || '{}');
-    const users = JSON.parse(localStorage.getItem('users') || '[]');
-
-    // ADMIN CHECK
-    if (admin.email && admin.email.toLowerCase() === email) {
-      out.innerHTML = `
-        <div class="muted">Admin Account Found:</div>
-        <strong>${admin.name}</strong><br>
-        <span class="muted">${admin.email}</span>
-        <div style="margin-top:10px">
-          <button id="revealBtn" class="btn small">Reveal Password</button>
-        </div>
-      `;
-
-      document.getElementById('revealBtn').addEventListener('click', () => {
-        alert("Admin Password: " + admin.password);
-      });
-
-      return;
-    }
-
-    // NORMAL USER CHECK
-    const user = users.find(u => u.email.toLowerCase() === email);
-
-    if (!user) {
-      out.innerHTML = `<span class="muted">No account found for that email.</span>`;
-      return;
-    }
-
-    out.innerHTML = `
-      <div class="muted">Account Found:</div>
-      <strong>${user.name}</strong><br>
-      <span class="muted">${user.email}</span>
-      <div style="margin-top:10px">
-        <button id="revealBtn" class="btn small">Reveal Password</button>
-      </div>
-    `;
-
-    document.getElementById('revealBtn').addEventListener('click', () => {
-      alert("Password for " + user.email + " is: " + user.password);
-    });
-  });
-});
-</script>
 </body>
 </html>
