--- a/admin.html
+++ b/admin.html
@@ -1,68 +1,48 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Admin Dashboard — BiTForeX Academy</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Admin Dashboard — BiTForeX Academy</title>
+<link rel="stylesheet" href="style.css" />
+<style>
+/* small styles for notif bell/panel; your style.css will handle layout */
+.notif-bell{position:relative;font-size:18px;cursor:pointer;margin-left:10px}
+.notif-count{position:absolute;top:-8px;right:-8px;background:#ff3b30;color:#fff;padding:3px 6px;border-radius:50%;font-size:12px}
+.notif-panel{position:absolute;right:12px;top:64px;width:320px;background:#111;border:1px solid rgba(255,255,255,0.06);border-radius:10px;padding:10px;z-index:2000;max-height:380px;overflow:auto}
+.notif-panel.hidden{display:none}
+</style>
 </head>
 <body class="page-admin">
 <header class="navbar">
-  <div class="brand">
-    <div class="logo-circle"><img src="logo.jpg" alt="logo"></div>
-    <a class="logo-text">BiTForeX Admin</a>
-  </div>
-
+  <div class="brand"><div class="logo-circle"><img src="logo.jpg" alt="logo"></div><a class="logo-text">BiTForeX Admin</a></div>
   <nav class="nav" id="main-nav">
     <a href="admin.html" class="active">Dashboard</a>
     <a href="admin-users.html">Users</a>
     <a href="admin-payment-settings.html">Payment Settings</a>
     <a href="admin-payments.html">Payments</a>
-    <a href="admin-courses.html">Courses</a>
     <a href="admin-subscription-settings.html">Subscription Settings</a>
     <a href="admin-chat.html">Chat Inbox</a>
     <a href="admin-profile.html">Profile</a>
-
-    <div class="notif-bell" id="notifBell">🔔 <span id="notifCount" class="notif-count hidden">0</span></div>
-    <a href="login.html" id="logout-admin">Logout</a>
   </nav>
-
-  <div id="menu-toggle" class="menu-toggle">☰</div>
+  <div class="notif-bell" id="notifBell">🔔 <span id="notifCount" class="notif-count hidden">0</span></div>
+  <div class="menu-toggle" id="menu-toggle">☰</div>
 </header>
 
-<main class="container fade-in-up" style="margin-top:90px;">
+<div class="notif-panel hidden" id="notifPanel">
+  <h4>Notifications</h4>
+  <div id="notifList" class="notif-list"><p class="muted">Loading...</p></div>
+</div>
+
+<main class="container" style="margin-top:90px">
   <h2>Admin Dashboard</h2>
-  <p class="muted">Monitor user activity, payments, subscriptions and messages.</p>
-
   <section class="cards" style="margin-top:25px;">
-    <div class="card">
-      <h3>Total Users</h3>
-      <p id="count-users" class="count-number">0</p>
-    </div>
-    <div class="card">
-      <h3>Pending Payments</h3>
-      <p id="count-pending" class="count-number">0</p>
-    </div>
-    <div class="card">
-      <h3>Active Subscriptions</h3>
-      <p id="count-active" class="count-number">0</p>
-    </div>
-    <div class="card">
-      <h3>Unread Messages</h3>
-      <p id="count-messages" class="count-number">0</p>
-    </div>
+    <div class="card"><h3>Total Users</h3><p id="count-users" class="count-number">0</p></div>
+    <div class="card"><h3>Pending Payments</h3><p id="count-pending" class="count-number">0</p></div>
+    <div class="card"><h3>Active Subscriptions</h3><p id="count-active" class="count-number">0</p></div>
+    <div class="card"><h3>Unread Messages</h3><p id="count-messages" class="count-number">0</p></div>
   </section>
-
-  <div class="notif-panel hidden" id="notifPanel" style="position:absolute;right:12px;top:72px;">
-    <h4>Notifications</h4>
-    <div id="notifList" class="notif-list">Loading...</div>
-  </div>
 </main>
 
-<footer class="site-footer"><p>© <span id="yr"></span> BiTForeX Admin</p></footer>
-
-<!-- firebase.js MUST come before script.js -->
-<!-- include the firebase.js block content here (copy the firebase.js snippet into a file and reference it) -->
 <script src="firebase.js"></script>
 <script src="script.js"></script>
 </body>
