--- a/login.html
+++ b/login.html
@@ -12,11 +12,13 @@
     <div class="logo-circle"><img src="logo.jpg" alt="logo"></div>
     <a class="logo-text" href="index.html">BiTForeX Academy</a>
   </div>
+
   <nav class="nav" id="main-nav">
     <a href="index.html">Home</a>
     <a href="register.html">Register</a>
     <a href="forgot-password.html">Forgot</a>
   </nav>
+
   <div class="menu-toggle" id="menu-toggle">☰</div>
 </header>
 
@@ -27,12 +29,9 @@
     <input type="password" id="loginPassword" placeholder="Password" required />
     <button class="btn primary" style="width:100%">Sign In</button>
   </form>
-  <p style="margin-top:12px;text-align:center">
-    <a href="register.html" class="muted">Create Account</a> · <a href="forgot-password.html" class="muted">Forgot password?</a>
-  </p>
 </main>
 
-<!-- firebase + app scripts -->
+<!-- MUST be last -->
 <script src="firebase.js"></script>
 <script src="script.js"></script>
 </body>
