--- a/admin-payments.html
+++ b/admin-payments.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Admin Payments</title>
+<base href="/BiTForeXAcademy-/">
+  <title>Admin Payments</title>
 <link rel="stylesheet" href="style.css"/>
 </head>
 
