--- a/admin-profile.html
+++ b/admin-profile.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Admin Profile — BiTForeX</title>
+<base href="/BiTForeXAcademy-/">
+  <title>Admin Profile — BiTForeX</title>
 <link rel="stylesheet" href="style.css"/>
 
 <style>
