--- a/admin-view-chat.html
+++ b/admin-view-chat.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
-<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Admin — View Chat</title><link rel="stylesheet" href="style.css"/></head>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <base href="/BiTForeXAcademy-/">
+  <title>Admin — View Chat</title><link rel="stylesheet" href="style.css"/></head>
 <body class="page-admin">
 <header class="navbar"><div class="logo-wrapper"><div class="logo-circle"><img src="logo.jpg"></div><div class="logo-text">BiTForeX Admin</div></div><div id="menu-toggle" class="menu-toggle">☰</div><nav class="nav" id="main-nav"><a href="admin.html">Dashboard</a><a href="admin-users.html">Users</a><a href="admin-settings.html">Clients</a><a href="admin-chat.html">Chat Inbox</a><a href="admin-profile.html">Profile</a></nav></header>
 
