Add base tag to admin.html for relative URLs

--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Admin Dashboard — BiTForeX Academy</title>
+<base href="/BiTForeXAcademy-/">
+  <title>Admin Dashboard — BiTForeX Academy</title>
 <link rel="stylesheet" href="style.css" />
 <style>
 /* small styles for notif bell/panel; your style.css will handle layout */
