--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <base href="/BiTForeXAcademy-/">
   <title>Login — BiTForeX Academy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
