--- a/logout.html
+++ b/logout.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+ <base href="/BiTForeXAcademy-/">
   <title>Logging out — BiTForeX</title>
   <link rel="stylesheet" href="style.css" />
 </head>
