--- a/payment.html
+++ b/payment.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Make Payment — BiTForeX</title>
+<base href="/BiTForeXAcademy-/">
+  <title>Make Payment — BiTForeX</title>
 <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
