--- a/user-pending.html
+++ b/user-pending.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
-<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Payment Pending — BiTForeX</title><link rel="stylesheet" href="style.css"/></head>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <base href="/BiTForeXAcademy-/">
+  <title>Payment Pending — BiTForeX</title><link rel="stylesheet" href="style.css"/></head>
 <body>
 <main class="container" style="margin-top:90px">
   <div class="pending-box" id="pendingBox">
